--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URL = 'mongodb+srv://lp-reservation:lp-reservation@cluster0.qjwlv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+MONGO_URL = 'mongodb+srv://resv:resv@resv.38tfb.mongodb.net/?retryWrites=true&w=majority&appName=resv'
